Use pandoc.table to print input_ref

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(find_all_assignments)
 export(find_input_code)
 export(load_reactive_objects)
 export(validate_inputs)
+importFrom(dplyr,arrange)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -14,12 +15,14 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,row_number)
 importFrom(dplyr,rowwise)
+importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
 importFrom(knitr,purl)
 importFrom(magrittr,"%>%")
+importFrom(pander,pandoc.table)
 importFrom(readr,read_file)
 importFrom(readr,read_lines)
 importFrom(stringr,str_detect)
