--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,3 +29,4 @@ importFrom(stringr,str_replace_all)
 importFrom(styler,style_text)
 importFrom(tibble,tibble)
 importFrom(tidyr,unnest)
+importFrom(utils,menu)
