--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: shinyloadr
 Title: Loads reactive data frames and mock input list into environment
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: person("Jake", "Riley", email = "rjake@sas.upenn.edu", role = c("aut", "cre"))
 Description: Troubleshooting reactive data in flexdashboard can be difficult. The goal of this package is to convert reactive data frames into functions that will read from your raw data. It is recommended that an dummy input list be available to simulate the reactive inputs your users will manipulate.
 License: GPL-3
@@ -15,6 +15,7 @@ Imports:
   pander,
   readr,
   rstudioapi,
+  shiny,
   stringr,
   styler,
   tibble,
