--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(load_reactive_objects)
 export(parse_server_file)
 export(remove_objects)
 export(valid_assignments)
+export(view_ui)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,distinct)
@@ -30,6 +31,7 @@ importFrom(rstudioapi,viewer)
 importFrom(shiny,fluidPage)
 importFrom(shiny,runApp)
 importFrom(shiny,shinyApp)
+importFrom(shiny,stopApp)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_locate_all)
