Create convert_selection function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(breakout_server_code)
 export(char_between)
+export(convert_selection)
 export(guts)
 export(load_reactive_objects)
 export(remove_objects)
@@ -28,6 +29,7 @@ importFrom(magrittr,"%>%")
 importFrom(pander,pandoc.table)
 importFrom(readr,read_file)
 importFrom(readr,read_lines)
+importFrom(rstudioapi,getSourceEditorContext)
 importFrom(rstudioapi,restartSession)
 importFrom(rstudioapi,viewer)
 importFrom(shiny,fluidPage)
